# mini-alloc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
allocator/: allocator.hpp
config/: benchmark_config.cpp  benchmark_config.hpp
src/: allocator.cpp  allocator.hpp  main.cpp
tests/: benchmark_malloc.cpp
tests/linear/: benchmark_linear.cpp  benchmark_linear.hpp
tests/malloc/: benchmark_malloc.cpp  benchmark_malloc.hpp
tests/stack/: benchmark_stack.cpp  benchmark_stack.hpp
